--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "exercise1",
   "private": true,
   "dependencies": {
-    "jquery": "~2.1.1"
+    "jquery": "~2.1.1",
+    "p5js": "~0.4.5"
   }
 }
